--- a/app/globals.css
+++ b/app/globals.css
@@ -4,16 +4,6 @@
 
 /* Light Theme Styles */
 
-.light-theme {
-  background-color: red;
-  color: #000000;
-}
-
-/* Dark Theme Styles */
-.dark-theme {
-  background-color: #0a08089f;
-  color: #ffffff;
-}
 /* Light Theme Styles for home2 */
 .light-theme-home2 {
   background-color: #e0e0e0; /* Set the desired light theme background color */
@@ -22,7 +12,7 @@
 
 /* Dark Theme Styles for home2 */
 .dark-theme-home2 {
-  background-color: #333333; /* Set the desired dark theme background color */
+  background: #0e2a47; /* Set the desired dark theme background color */
   color: #ffffff;
 }
 
@@ -75,14 +65,24 @@ body.dark-theme {
     rgba(247, 90, 216, 0.696) 100%
   );
 } */
+
 .para {
   color: blue;
 }
 
-body {
-  box-sizing: border-box;
+.light-theme-body {
+  background: linear-gradient(
+    90deg,
+    rgba(78, 78, 246, 0.647) 0%,
+    rgba(247, 90, 216, 0.696) 100%
+  );
 }
+/* Dark Theme Styles */
+.dark-theme-body {
+  background: #0e2a47;
 
+  /* Set your desired dark theme background color */
+}
 .App {
   text-align: center;
 }
@@ -173,15 +173,24 @@ body {
     rgba(247, 90, 216, 0.696) 100%
   );
 }
-
 .Home {
   width: 97%;
   padding: 20px;
   overflow-y: auto;
-  overflow-x: hidden;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
-  /* background: #0e2a47; */
+  overflow-x: hidden;
+}
+.light-theme-Home {
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  border: 2px solid rgba(255, 255, 255, 0.3);
+}
+.dark-theme-Home {
+  background: #0e2a47;
+
   border: 2px solid rgba(255, 255, 255, 0.807);
   border-radius: 16px;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
@@ -1768,7 +1777,7 @@ footer {
 }
 .item,
 .itemcontact {
-  /* background: #0e2a47; */
+  background: #0e2a47;
   border: 2px solid rgba(255, 255, 255, 0.807);
   border-radius: 16px;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
