--- a/app/body.css
+++ b/app/body.css
@@ -1,68 +1,68 @@
-.dark-theme-About3 p,
-.dark-theme-footerpara p,
-.dark-theme-About3 ul li,
-.dark-theme-About3 ul li a,
-.dark-theme-ListItemTextSkill,
-.dark-theme-ListItemText,
-.dark-theme-projectcardtitle,
-.dark-theme-ProjectTopTextDiv,
-.dark-theme-listitemtextadmin,
-.dark-theme-custom-input-color input,
-.dark-theme-custom-quill-content .ql-editor,
-.dark-theme-custom-input-color,
-.dark-theme-progress-label-color,
-.dark-theme-blogcardh1,
-.dark-theme-custom-input-color p {
+body.dark-mode .About3 p,
+body.dark-mode .footerpara p,
+body.dark-mode .About3 ul li,
+body.dark-mode .About3 ul li a,
+body.dark-mode .ListItemTextSkill,
+body.dark-mode .ListItemText,
+body.dark-mode .projectcardtitle,
+body.dark-mode .ProjectTopTextDiv,
+body.dark-mode .listitemtextadmin,
+body.dark-mode .custom-input-color input,
+body.dark-mode .custom-quill-content .ql-editor,
+body.dark-mode .custom-input-color,
+body.dark-mode .progress-label-color,
+body.dark-mode .blogcardh1,
+body.dark-mode .custom-input-color p {
   color: black;
 }
 
-.dark-theme-themecard:hover {
+body.dark-mode .themecard:hover {
   color: blue;
 }
-.dark-theme-drawerBackground .MuiDrawer-paper {
+body.dark-mode .drawerBackground .MuiDrawer-paper {
   background-color: #0e2a47;
   border: 1px solid rgba(255, 255, 255, 0.807);
   border-radius: 16px;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
     rgba(194, 232, 249, 0.484) 0px 2px 16px 0px;
 }
-.dark-theme-Home,
-.dark-theme-item,
-.dark-theme-itemcontact {
+body.dark-mode .Home,
+body.dark-mode .item,
+body.dark-mode .itemcontact {
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
-.dark-theme-QuillDescription p {
+body.dark-mode .QuillDescription p {
   color: black;
 }
 
-.dark-theme-ooter {
+body.dark-mode footer {
   color: black;
 }
-/* .dark-theme-
+/* body.dark-mode {
   background: var(--background-dark);
 } */
 
-.light-theme-Home {
+/* .light-theme-Home {
   background: #0e2a47;
   border-radius: 16px;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
     rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   border: 2px solid rgba(255, 255, 255, 0.3);
-}
+} */
 
-.dark-theme-itemcontact,
-.dark-theme-contactform_container,
-.dark-theme-new_footer_area {
+body.dark-mode .itemcontact,
+body.dark-mode .contactform_container,
+body.dark-mode .new_footer_area {
   background: rgba(255, 255, 255, 0.2);
   border-radius: 16px;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
     rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   border: 2px solid rgba(255, 255, 255, 0.3);
 }
-.dark-theme-ProjectCard,
-.dark-theme-ProjectTopTextDiv {
+body.dark-mode .ProjectCard,
+body.dark-mode .ProjectTopTextDiv {
   background: linear-gradient(
     90deg,
     rgba(78, 78, 246, 0.647) 0%,
@@ -73,7 +73,7 @@
     0px 2px 16px 0px rgba(14, 30, 37, 0.32);
   border: 1px solid rgba(254, 56, 214, 0.833);
 }
-.dark-theme {
+body.dark-mode {
   background: linear-gradient(
     90deg,
     rgba(78, 78, 246, 0.647) 0%,
